examples/errors/unknown_entity_connector.eventmodel
Title: Unknown Entity Reference

Swimlane: System
- Event: SystemStarted

SystemStarted -> NonExistentEntity